traversal.snake.Snake.scala.error
Compilation error:
Snake:1: error: ';' expected but '=' found.
override def run() {def test_fin() {test:Boolean=false; if (getDirection()==Direction.EAST) {left();
                                                ^Snake:3: error: ';' expected but '=' found.
  test2:Boolean=false
               ^